# wcag-lsp

./: .gitignore  Cargo.toml  README.md  RULES.md  install.sh  wcag-lsp.schema.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-27-wcag-lsp-design.md  2026-02-27-wcag-lsp-implementation.md  2026-03-02-vscode-extension-design.md  2026-03-02-vscode-extension.md
editors/vscode/: .vscodeignore  LICENSE.md  README.md  package-lock.json  package.json
editors/vscode/src/: download.ts  extension.ts
src/: cli.rs  config.rs  document.rs  engine.rs  inline_directives.rs  lib.rs  main.rs  parser.rs  server.rs  updater.rs
src/rules/: anchor_content.rs  area_alt.rs  aria_allowed_attr.rs  aria_deprecated_role.rs  aria_hidden_body.rs  aria_hidden_focus.rs  aria_prohibited_attr.rs  aria_props.rs  aria_required_attr.rs  aria_required_children.rs  aria_required_parent.rs  aria_role.rs  aria_valid_attr_value.rs  autocomplete_valid.rs  button_name.rs  click_events.rs  form_label.rs  heading_content.rs  heading_order.rs  html_attrs.rs  html_lang.rs  iframe_title.rs  img_alt.rs  input_image_alt.rs  lang_valid.rs  list_structure.rs  media_captions.rs  meta_refresh.rs  mod.rs  mouse_events.rs  nested_interactive.rs  no_access_key.rs  no_autoplay.rs  no_distracting_elements.rs  no_duplicate_id.rs  no_redundant_alt.rs  no_redundant_roles.rs  object_alt.rs  page_title.rs  scope_attr.rs  (+2 more)
tests/: integration.rs
