[package]
name = "wcag-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-lsp-server = "0.23"
tree-sitter = "0.24"
tree-sitter-html = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
glob-match = "0.2"
