[package]
name = "wcag-lsp"
version = "0.5.0"
edition = "2024"

[dependencies]
tower-lsp-server = "0.23"
tree-sitter = "0.24"
tree-sitter-html = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread", "time"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
glob-match = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1"
semver = "1"
self-replace = "1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
flate2 = "1"
tar = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
zip = "2"
